--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/HPTemp', {
-    heroTitle: 'Uncover the Foundations of the Digital Age',
+    heroTitle: 'Get Ready To Come Out Of Your Shell',
     heroSubtitle: 'Empower yourself with essential commands and knowledge to excel in tech and coding',
     heroButtonLink: '/LinkPage',
     heroButtonText: 'Access Content Now',
