--- a/views/partials/HPTemp.ejs
+++ b/views/partials/HPTemp.ejs
@@ -1,5 +1,5 @@
-<%- include('HPHead') %>
-<%- include('navbar') %>
+<%- include('partials/HPHead') %>
+<%- include('partials/navbar') %>
 
 <body>
     <!-- Hero Section -->
@@ -80,16 +80,6 @@
             <img src="<%= tutorImage %>">
         </div>
     </section>
-
-    <!-- Footer -->
-     <!--
-    <footer>
-        <div class="progress-tracker">
-            <h4><%= footerText %></h4>
-            <a href="<%= footerButtonLink %>" class="moti-btn"><%= footerButtonText %></a>
-        </div>
-    </footer>
-    -->
-    <%- include('footer') %>
+    <%- include('partials/footer') %>
 </body>
 </html>
