--- a/docs/css/homepage.css
+++ b/docs/css/homepage.css
@@ -13,7 +13,7 @@ body {
     overflow-x: hidden;
 }
 
-header {
+/*header {
     display: flex;
     justify-content: space-between;
     padding: 20px;
@@ -28,7 +28,7 @@ header {
     color: white;
     max-width: 100%;
     overflow: hidden;
-}
+}*/
 
 nav ul {
     list-style: none;
@@ -43,8 +43,8 @@ nav ul {
     align-items: flex-start;
     background-size: cover;
     background-position: center;
-    background-image: url('../images/SageHomepage.png');
-    box-shadow: inset 0 0 0 1000px rgba(186, 212, 186, 0.75);
+    background-image: url('../images/EggHero.png');
+    box-shadow: inset 0 0 0 1000px rgba(217, 217, 217, 0.7);
     color: #616d81;
     -webkit-text-stroke-color: #333;
     padding: 15px 15px;
