--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,8 +1,8 @@
 <body>
     <header class="Content-Nav">
         <div class="logo">
-            <h1><em>IS117</em></h1>
-            <h2><em>Your Guide to the Tech Frontier</em></h2>
+            <h1><em>EGG</em></h1>
+            <h2><em>Are You Ready To Get Egg-cited?</em></h2>
         </div>
         <nav class="menu">
             <button class="menu-toggle" aria-label="Toggle menu" aria-expanded="false">
@@ -15,10 +15,9 @@
                     <% if (currentPage !== 'home') { %>
                         <li><a href="#"><i class="fas fa-home"></i>Home</a></li>
                     <% } %>
-                    <li><a href="#">Learning Index</a></li>
                     <li><a href="#"><i class="fas fa-info-circle"></i>About</a></li>
                     <li><a href="#"><i class="fas fa-cogs"></i>Services</a></li>
-                    <li><a href="#"><i class="fas fa-briefcase"></i>Portfolio</a></li>
+                    <li><a href="#"><i class="fas fa-briefcase"></i>Gear</a></li>
                     <li><a href="#"><i class="fas fa-envelope"></i>Contact</a></li>
                 </ul>
             </div>
