--- a/docs/partials/footer.html
+++ b/docs/partials/footer.html
@@ -2,7 +2,6 @@
     <nav class="footer-logo">
         <h1><em>Site Links</em></h1>
         <ul>
-            <li><a href="#">Learning Index</a></li>
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Our Team</a></li>
             <li><a href="#">About Us</a></li>
@@ -15,8 +14,8 @@
         <a href="#"><i class="fa-brands fa-facebook fa-2x"></i></a>
     </nav>
     <div class="footer-subscription">
-        <h3>Subscribe For Access To Advanced Materials</h3>
-        <p>Join the thousands of students that use our site daily</p>
+        <h3>Get Some Daily Nutrition</h3>
+        <p>Join the journey like our thousands of other Egg Heads</p>
         <form class="subscription-form">
             <input 
                 type="email" 
@@ -42,7 +41,7 @@
         });
     </script>
     <div class="footer-info">
-        <p>&copy; 2024 IS117. All Rights Reserved.</p>
-        <p>Designed and Developed by IS117 Team</p>
+        <p>&copy; 2024 Eggs-traordinary. All Rights Reserved.</p>
+        <p>Designed and Developed by Eggs-traordinary Team</p>
     </div>
 </footer>
