--- a/docs/partials/navbar.html
+++ b/docs/partials/navbar.html
@@ -1,7 +1,7 @@
 <body>
     <header class="Content-Nav">
         <div class="logo">
-            <h1><em>EGG</em></h1>
+            <h1><em>Eggs-traordinary</em></h1>
             <h2><em>Are You Ready To Get Egg-cited?</em></h2>
         </div>
         <nav class="menu">
@@ -16,7 +16,6 @@
                         <li><a href="#"><i class="fas fa-home"></i>Home</a></li>
                     
                     <li><a href="#"><i class="fas fa-info-circle"></i>About</a></li>
-                    <li><a href="#"><i class="fas fa-cogs"></i>Services</a></li>
                     <li><a href="#"><i class="fas fa-briefcase"></i>Gear</a></li>
                     <li><a href="#"><i class="fas fa-envelope"></i>Contact</a></li>
                 </ul>
