--- a/docs/css/homepage.css
+++ b/docs/css/homepage.css
@@ -3,32 +3,27 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Rockwell', sans-serif;
     --link-color: #007acc;
 }
 
 body {
     font-family: 'Roboto', sans-serif;
-    color: #333;
+    color: #3B4151;
     overflow-x: hidden;
 }
 
-/*header {
+header {
     display: flex;
     justify-content: space-between;
     padding: 20px;
     text-align: center;
-    font-family: 'Roboto', sans-serif;
-    background-color: #3e513b;
-    background-image: url('../images/NavBackground.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    box-shadow: inset 0 0 0 1000px rgba(62,81,59,.80);
+    font-family: 'Rockwell', sans-serif;
+    background-color: #3B4151;
     color: white;
     max-width: 100%;
     overflow: hidden;
-}*/
+}
 
 nav ul {
     list-style: none;
@@ -40,50 +35,51 @@ nav ul {
 .hero {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-end;
     background-size: cover;
     background-position: center;
     background-image: url('../images/EggHero.png');
-    box-shadow: inset 0 0 0 1000px rgba(217, 217, 217, 0.7);
-    color: #616d81;
-    -webkit-text-stroke-color: #333;
-    padding: 15px 15px;
+    box-shadow: inset 0 0 0 1000px rgba(217, 217, 217, 0.4);
+    color: #3B4151;
+    -webkit-text-stroke-color: #616d81;
+    padding: 100px 15px;
     max-width: 100%;
     box-sizing: border-box;
+    text-align: right;
 }
 
 .hero-row {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
     text-align: center;
+    gap: 20px;
 }
 
 .hero-row h2, p {
-    max-width: 1000px;
-    margin-left: 20px;
+    margin: 0;
+    padding-right: 30px;
 }
 
 .hero-row h2 {
-    font-size: 5em;
+    font-size: 3em;
     line-height: 100px;
-    -webkit-text-stroke-width: 0.1px;
+    -webkit-text-stroke-width: 1px;
     font-weight: bolder;
+    max-width: 700px;
 }
 
 .hero-row p {
     font-size: 1.7em;
     -webkit-text-stroke-width: 1px;
+    max-width: 700px;
 }
 
 .access {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
+    justify-content: flex-end;
+    margin-top: 20px;
     margin-right: 30px;
-    transform: translateY(-200px);
-    max-width: 100%;
 }
 
 .access a:hover {
@@ -91,7 +87,7 @@ nav ul {
 }
 
 .acc-btn {
-    background-color: #b3a862;
+    background-color: #aecee5;
     font-size: 40px;
     color: white;
     border: none;
@@ -106,10 +102,17 @@ nav ul {
     flex-direction: column;
     align-items: center;
     padding: 20px 20px;
-    background-image: linear-gradient(to bottom right, #d1ddea, #b0ceb0);
-    color: #b3a862;
+    color: #def1ea;
     max-width: 100%;
     box-sizing: border-box;
+}
+
+.topics {
+    background-image: url('../images/CTABackground.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    box-shadow: inset 0 0 0 1000px rgba(165, 170, 185, 0.75);
 }
 
 .topics h1 {
@@ -134,7 +137,7 @@ nav ul {
 
 /* TOPIC CARDS */
 .topic-card {
-    background-color: #ededd9;
+    background-color: #839db3;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     text-align: center;
@@ -153,22 +156,22 @@ nav ul {
 }
 
 .topic-icon {
-    color: #b3a862;
+    color: #def1ea;
     margin-bottom: 15px;
 }
 
 .topic-content h3 {
     font-size: 1.5em;
     margin-bottom: 10px;
-    color: #ffffff;
-    background-image: linear-gradient(to bottom right, #d1ddea, #b0ceb0);
+    color: #def1ea;
+    background-image: linear-gradient(to bottom right, #d1ddea, #aecee5);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
 }
 
 .topic-content p {
     font-size: 1em;
-    color: #666;
+    color: #3B4151;
 }
 
 .topic-btn {
@@ -195,12 +198,12 @@ nav ul {
     padding: 20px;
     text-align: center;
     background-color: #3e513b;
-    background-image: url('../images/NavBackground.png');
+    background-image: url('../images/EggHeader.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    box-shadow: inset 0 0 0 1000px rgba(62,81,59,.80);
-    color: white;
+    box-shadow: inset 0 0 0 1000px rgba(59, 65, 81,.6);
+    color: #def1ea;
     overflow-x: hidden;
 }
 
@@ -229,14 +232,14 @@ nav ul {
     justify-content: center;
     gap: 20px;
     flex-wrap: nowrap;
-    max-width: 500px;
+    max-width: 600px;
 }
 
 .cta-box h4 {
     margin: 0;
     font-size: 1.5em;
     line-height: 1.2;
-    color: white;
+    color: #def1ea;
     white-space: wrap;
 }
 
@@ -245,8 +248,8 @@ nav ul {
 }
 
 .download-btn {
-    background-color: #b3a862;
-    color: white;
+    background-color: #aecee5;
+    color: #def1ea;
     border: none;
     padding: 10px 20px;
     border-radius: 15px;
@@ -269,11 +272,19 @@ nav ul {
     padding: 20px;
     gap: 100px;
     text-align: center;
-    background-image: linear-gradient(to top, #b0ceb0, #b0ceb0,  #3e513b);
+    
+}
+
+.WWS {
+    background-image: url('../images/AdvEgg.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    box-shadow: inset 0 0 0 1000px rgba(165, 170, 185, 0.9);
 }
 
 .WWS-img img {
-    width: 500px;
+    width: 400px;
     height: auto;
     border-radius: 30px;
     padding: 10px;
@@ -290,12 +301,12 @@ nav ul {
 .WWS-txt h1 {
     color: #616d81;
     -webkit-text-stroke-color: #333;
-    -webkit-text-stroke-width: 0.01px;
-    font-size: 70px;
+    -webkit-text-stroke-width: 1px;
+    font-size: 59px;
     margin-bottom: 10px;
     margin-top: 0;
     font-weight: bolder;
-    max-width: 600px;
+    max-width: 800px;
 }
 
 .WWS-txt p {
@@ -305,11 +316,18 @@ nav ul {
     -webkit-text-stroke-width: 0.7px;
     line-height: 1.5;
     font-weight: 100;
-    font-size: 17px;
+    font-size: 25px;
     max-width: 800px;
 }
 
 /* IMPACT SECTION */
+.Impact {
+    background-image: url('../images/EBTwo.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    box-shadow: inset 0 0 0 1000px rgba(59, 65, 81, 0.8);
+}
 .Impact h1, h3 {
     text-align: center;
     margin-top: 0;
@@ -317,9 +335,9 @@ nav ul {
 }
 
 .Impact h1 {
-    font-size: 70px;
+    font-size: 50px;
     font-weight: bolder;
-    letter-spacing: 2cm;
+    letter-spacing: .5cm;
 }
 
 .Impact h3 {
@@ -335,7 +353,7 @@ nav ul {
 }
 
 .Imp {
-    background-color: #ededd9;
+    background-color: #839db3;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     text-align: center;
@@ -358,8 +376,16 @@ nav ul {
     font-weight: 100;
 }
 
+.tutor {
+    background-image: url('../images/AdvEgg.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    box-shadow: inset 0 0 0 1000px rgba(165, 170, 185, 0.9);
+}
+
 .tutor-img img {
-    width: 700px;
+    width: 500px;
     height: auto;
     border-radius: 30px;
     margin: 10px;
@@ -376,12 +402,12 @@ nav ul {
 .tutor-txt h1 {
     color: #616d81;
     -webkit-text-stroke-color: #333;
-    -webkit-text-stroke-width: 0.01px;
+    -webkit-text-stroke-width: 1px;
     font-size: 70px;
     margin-bottom: 10px;
     margin-top: 0;
     font-weight: bolder;
-    max-width: 600px;
+    max-width: 800px;
 }
 
 .tutor-txt p {
