--- a/docs/partials/HPHead.html
+++ b/docs/partials/HPHead.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Egg</title>
+        <title>Eggs-traordinary</title>
         <link rel="stylesheet" href="./css/homepage.css">
         <link rel="stylesheet" href="./css/navbar.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -15,6 +15,9 @@
         <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto&family=Outfit&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
         <noscript>
             <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Outfit&display=swap">
+        </noscript>
+        <noscript>
+            <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
         </noscript>
     </head>
     <script src="js/script.js"></script>
