--- a/views/partials/HPTemp.ejs
+++ b/views/partials/HPTemp.ejs
@@ -26,9 +26,35 @@
                         <h3><%= topic.title %></h3>
                         <p><%= topic.description %></p>
                     </div>
-                    <a href="<%= topic.link %>" class="topic-btn">Learn More</a>
+                    <!--<a href="<%= topic.link %>" class="topic-btn">Learn More</a>-->
                 </div>
             <% }) %>
+        </div>
+    </section>
+
+    <!-- Impact -->
+    <section class="Impact">
+        <h1><%= impactHeading %></h1>
+        <h3><%= impactSubheading %></h3>
+        <div class="Imp-row">
+            <% impactReviews.forEach(review => { %>
+                <div class="Imp">
+                    <p><%= review %></p>
+                </div>
+            <% }) %>
+        </div>
+    </section>
+
+    
+    <!-- Tutoring -->
+    <section class="tutor">
+        <div class="tutor-txt">
+            <h1><%= tutoringHeading %></h1>
+            <p><%= tutoringText1 %></p>
+            <p><%= tutoringText2 %></p>
+        </div>
+        <div class="tutor-img">
+            <img src="<%= tutorImage %>">
         </div>
     </section>
     
@@ -53,31 +79,6 @@
             <h1><%= whyWeStartedHeading %></h1>
             <p><%= whyWeStartedText1 %></p>
             <p><%= whyWeStartedText2 %></p>
-        </div>
-    </section>
-
-    <!-- Impact -->
-    <section class="Impact">
-        <h1><%= impactHeading %></h1>
-        <h3><%= impactSubheading %></h3>
-        <div class="Imp-row">
-            <% impactReviews.forEach(review => { %>
-                <div class="Imp">
-                    <p><%= review %></p>
-                </div>
-            <% }) %>
-        </div>
-    </section>
-
-    <!-- Tutoring -->
-    <section class="tutor">
-        <div class="tutor-txt">
-            <h1><%= tutoringHeading %></h1>
-            <p><%= tutoringText1 %></p>
-            <p><%= tutoringText2 %></p>
-        </div>
-        <div class="tutor-img">
-            <img src="<%= tutorImage %>">
         </div>
     </section>
     <%- include('partials/footer') %>
