--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/HPTemp', {
     heroTitle: 'Get Ready To Come Out Of Your Shell',
     heroSubtitle: 'Not just an egg—your next journey begins here',
-    heroButtonLink: '#',
+    heroButtonLink: '#topics',
     heroButtonText: 'Start the Adventure',
 
     topicsHeading: 'Why This Egg Is Legendary',
@@ -12,7 +12,7 @@
     ],
 
     callsToAction: [
-        { title: 'Refresh Yourself With These On-The-Go Recipes', link: '#', buttonText: 'Free Egg Recipes' }
+        { title: 'Refresh Yourself With These On-The-Go Recipes', link: 'https://www.allrecipes.com/gallery/easy-egg-breakfast/', buttonText: 'Free Egg Recipes' }
     ],
 
     founderImage: 'images/ChickenAdv.png',
