--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,7 +7,7 @@
             <li><a href="#">About Us</a></li>
         </ul>
     </nav>
-    <nav class="footer-menu">
+    <nav class="footer-menu" id="socials">
         <h1>Follow Us</h1>
         <a href="#"><i class="fa-brands fa-instagram fa-2x"></i></a>
         <a href="#"><i class="fa-brands fa-tiktok fa-2x"></i></a>
