--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,12 +12,9 @@
             </button>
             <div class="menu-items" id="menuItems">
                 <ul>
-                    <% if (currentPage !== 'home') { %>
-                        <li><a href="#"><i class="fas fa-home"></i>Home</a></li>
-                    <% } %>
                     <li><a href="#"><i class="fas fa-info-circle"></i>About</a></li>
                     <li><a href="#"><i class="fas fa-briefcase"></i>Gear</a></li>
-                    <li><a href="#"><i class="fas fa-envelope"></i>Contact</a></li>
+                    <li><a href="#socials"><i class="fas fa-envelope"></i>Contact</a></li>
                 </ul>
             </div>
         </nav>
