--- a/views/partials/HPTemp.ejs
+++ b/views/partials/HPTemp.ejs
@@ -47,11 +47,12 @@
 
     
     <!-- Tutoring -->
-    <section class="tutor">
+    <section class="tutor" id="tutor">
         <div class="tutor-txt">
             <h1><%= tutoringHeading %></h1>
             <p><%= tutoringText1 %></p>
             <p><%= tutoringText2 %></p>
+            <p><%= tutoringText3 %></p>
         </div>
         <div class="tutor-img">
             <img src="<%= tutorImage %>">
@@ -79,6 +80,7 @@
             <h1><%= whyWeStartedHeading %></h1>
             <p><%= whyWeStartedText1 %></p>
             <p><%= whyWeStartedText2 %></p>
+            <p><%= whyWeStartedText3 %></p>
         </div>
     </section>
     <%- include('partials/footer') %>
