--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,7 @@
         <ul>
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Our Team</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="#tutor">About Us</a></li>
         </ul>
     </nav>
     <nav class="footer-menu" id="socials">
