--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,7 +12,7 @@
             </button>
             <div class="menu-items" id="menuItems">
                 <ul>
-                    <li><a href="#"><i class="fas fa-info-circle"></i>About</a></li>
+                    <li><a href="#tutor"><i class="fas fa-info-circle"></i>About</a></li>
                     <li><a href="#"><i class="fas fa-briefcase"></i>Gear</a></li>
                     <li><a href="#socials"><i class="fas fa-envelope"></i>Contact</a></li>
                 </ul>
